[package]
name = "MoveZaloData"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.winapi]
version = "0.3"
features = ["winuser"]

[dependencies]
directories = "4.0"

[build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "MoveZaloData.EXE"
LegalCopyright = "Copyright © 2023 mwolfinspace"